21-eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: zj001-whoami-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb

spec:
  type: LoadBalancer
  selector:
    app: zj001-whoami-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
