21-eks/ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: zj001-whoami-service-for-ingress
spec:
  type: ClusterIP
  selector:
    app: zj001-whoami-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "zj001-whoami-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: zj001-whoami-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "zj001-whoami-service-for-ingress"
              servicePort: 80
